Add npc, drop, chest